--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
-MONGO_URL='mongodb+srv://akgupta24092002:Apurva%40KIIT2020@apurvacluster.2q083ub.mongodb.net/ChitChat'
+MONGO_URL='mongodb+srv://akgupta24092002:Apurva%40KIIT2020@apurvacluster.2q083ub.mongodb.net/?retryWrites=true&w=majority&appName=apurvacluster'
 FRONTEND_URL='http://localhost:3000'
-JWT_SECRET='gupta24apurva'
+JWT_SECRET='gupta24apurva',
+PORT=4000
