--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 MONGO_URL='mongodb+srv://akgupta24092002:Apurva%40KIIT2020@apurvacluster.2q083ub.mongodb.net/ChitChat?retryWrites=true&w=majority&appName=apurvacluster'
-FRONTEND_URL='https://chitchat-ivory.vercel.app/'
+FRONTEND_URL='https://chitchat-ivory.vercel.app'
 JWT_SECRET='gupta24apurva',
 PORT=8000
